// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List List component 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "listStyleType": undefined,
          }
        }
      >
        <li
          style={
            Object {
              "listStyleType": "none",
            }
          }
        />
      </ol>
    </div>
  </div>
</div>
`;

exports[`List List component with ascending indents 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "listStyleType": undefined,
          }
        }
      >
        <li
          style={
            Object {
              "listStyleType": "none",
            }
          }
        >
          <ol
            start={1}
            style={
              Object {
                "listStyleType": undefined,
              }
            }
          >
            <li
              style={
                Object {
                  "listStyleType": "lower-alpha",
                }
              }
            >
              <span
                className="obo-text"
                data-group-index={0}
              >
                <span>
                  <span>
                    <span>
                      One(indent=1)
                    </span>
                  </span>
                </span>
              </span>
              <ul
                start={1}
                style={
                  Object {
                    "listStyleType": undefined,
                  }
                }
              >
                <li
                  style={
                    Object {
                      "listStyleType": "square",
                    }
                  }
                >
                  <span
                    className="obo-text"
                    data-group-index={1}
                  >
                    <span>
                      <span>
                        <span>
                          Two(indent=2)
                        </span>
                      </span>
                    </span>
                  </span>
                  <ol
                    start={1}
                    style={
                      Object {
                        "listStyleType": undefined,
                      }
                    }
                  >
                    <li
                      style={
                        Object {
                          "listStyleType": "upper-alpha",
                        }
                      }
                    >
                      <span
                        className="obo-text"
                        data-group-index={2}
                      >
                        <span>
                          <span>
                            <span>
                              Three(indent=3)
                            </span>
                          </span>
                        </span>
                      </span>
                      <ol
                        start="10"
                        style={
                          Object {
                            "listStyleType": undefined,
                          }
                        }
                      >
                        <li
                          style={
                            Object {
                              "listStyleType": "upper-alpha",
                            }
                          }
                        >
                          <span
                            className="obo-text"
                            data-group-index={3}
                          >
                            <span>
                              <span>
                                <span>
                                  Four(indent=4)
                                </span>
                              </span>
                            </span>
                          </span>
                          <ol
                            start={1}
                            style={
                              Object {
                                "listStyleType": undefined,
                              }
                            }
                          >
                            <li
                              style={
                                Object {
                                  "listStyleType": "decimal",
                                }
                              }
                            >
                              <span
                                className="obo-text"
                                data-group-index={4}
                              >
                                <span>
                                  <span>
                                    <span>
                                      Five(indent=5)
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <ol
                                start={1}
                                style={
                                  Object {
                                    "listStyleType": undefined,
                                  }
                                }
                              >
                                <li
                                  style={
                                    Object {
                                      "listStyleType": "lower-alpha",
                                    }
                                  }
                                >
                                  <span
                                    className="obo-text"
                                    data-group-index={5}
                                  >
                                    <span>
                                      <span>
                                        <span>
                                          Six(indent=6)
                                        </span>
                                      </span>
                                    </span>
                                  </span>
                                </li>
                              </ol>
                            </li>
                          </ol>
                        </li>
                      </ol>
                    </li>
                  </ol>
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`List List component with inverse indentation 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "listStyleType": undefined,
          }
        }
      >
        <li
          style={
            Object {
              "listStyleType": "decimal",
            }
          }
        >
          <span
            className="obo-text"
            data-group-index={0}
          >
            <span>
              <span>
                <span>
                  One(indent=1)
                </span>
              </span>
            </span>
          </span>
          <ol
            start={1}
            style={
              Object {
                "listStyleType": undefined,
              }
            }
          >
            <li
              style={
                Object {
                  "listStyleType": "none",
                }
              }
            >
              <ul
                start={1}
                style={
                  Object {
                    "listStyleType": undefined,
                  }
                }
              >
                <li
                  style={
                    Object {
                      "listStyleType": "square",
                    }
                  }
                >
                  <span
                    className="obo-text"
                    data-group-index={1}
                  >
                    <span>
                      <span>
                        <span>
                          Two(indent=2)
                        </span>
                      </span>
                    </span>
                  </span>
                </li>
              </ul>
            </li>
            <li
              style={
                Object {
                  "listStyleType": "lower-alpha",
                }
              }
            >
              <span
                className="obo-text"
                data-group-index={2}
              >
                <span>
                  <span>
                    <span>
                      Three(indent=6)
                    </span>
                  </span>
                </span>
              </span>
            </li>
          </ol>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`List List component with irregular indentation 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "listStyleType": undefined,
          }
        }
      >
        <li
          style={
            Object {
              "listStyleType": "decimal",
            }
          }
        >
          <span
            className="obo-text"
            data-group-index={0}
          >
            <span>
              <span>
                <span>
                  One(indent=1)
                </span>
              </span>
            </span>
          </span>
          <ol
            start={1}
            style={
              Object {
                "listStyleType": undefined,
              }
            }
          >
            <li
              style={
                Object {
                  "listStyleType": "none",
                }
              }
            >
              <ul
                start={1}
                style={
                  Object {
                    "listStyleType": undefined,
                  }
                }
              >
                <li
                  style={
                    Object {
                      "listStyleType": "square",
                    }
                  }
                >
                  <span
                    className="obo-text"
                    data-group-index={1}
                  >
                    <span>
                      <span>
                        <span>
                          Two(indent=2)
                        </span>
                      </span>
                    </span>
                  </span>
                  <ol
                    start={1}
                    style={
                      Object {
                        "listStyleType": undefined,
                      }
                    }
                  >
                    <li
                      style={
                        Object {
                          "listStyleType": "none",
                        }
                      }
                    >
                      <ol
                        start="10"
                        style={
                          Object {
                            "listStyleType": undefined,
                          }
                        }
                      >
                        <li
                          style={
                            Object {
                              "listStyleType": "none",
                            }
                          }
                        >
                          <ol
                            start={1}
                            style={
                              Object {
                                "listStyleType": undefined,
                              }
                            }
                          >
                            <li
                              style={
                                Object {
                                  "listStyleType": "none",
                                }
                              }
                            >
                              <ol
                                start={1}
                                style={
                                  Object {
                                    "listStyleType": undefined,
                                  }
                                }
                              >
                                <li
                                  style={
                                    Object {
                                      "listStyleType": "lower-alpha",
                                    }
                                  }
                                >
                                  <span
                                    className="obo-text"
                                    data-group-index={2}
                                  >
                                    <span>
                                      <span>
                                        <span>
                                          Three(indent=6)
                                        </span>
                                      </span>
                                    </span>
                                  </span>
                                </li>
                              </ol>
                            </li>
                          </ol>
                        </li>
                      </ol>
                    </li>
                  </ol>
                </li>
                <li
                  style={
                    Object {
                      "listStyleType": "square",
                    }
                  }
                >
                  <span
                    className="obo-text"
                    data-group-index={3}
                  >
                    <span>
                      <span>
                        <span>
                          Four(indent=2)
                        </span>
                      </span>
                    </span>
                  </span>
                  <ol
                    start={1}
                    style={
                      Object {
                        "listStyleType": undefined,
                      }
                    }
                  >
                    <li
                      style={
                        Object {
                          "listStyleType": "none",
                        }
                      }
                    >
                      <ol
                        start="10"
                        style={
                          Object {
                            "listStyleType": undefined,
                          }
                        }
                      >
                        <li
                          style={
                            Object {
                              "listStyleType": "upper-alpha",
                            }
                          }
                        >
                          <span
                            className="obo-text"
                            data-group-index={4}
                          >
                            <span>
                              <span>
                                <span>
                                  Five(indent=4)
                                </span>
                              </span>
                            </span>
                          </span>
                        </li>
                      </ol>
                    </li>
                    <li
                      style={
                        Object {
                          "listStyleType": "upper-alpha",
                        }
                      }
                    >
                      <span
                        className="obo-text"
                        data-group-index={5}
                      >
                        <span>
                          <span>
                            <span>
                              Six(indent=3)
                            </span>
                          </span>
                        </span>
                      </span>
                    </li>
                  </ol>
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
